[CrOS Tether] Eliminate token fetch from Initializer.

This code was unnecessary, since the CryptAuth component is the one that
needs to listen for these tokens. Additionally, the listener in this
class was set up improperly, which made it possible to get "stuck"
without a token.

Bug: 763506, 672263
Change-Id: I3e02f10aa201b129591028a8606b6fb4eefbaf11
Reviewed-on: https://chromium-review.googlesource.com/663978
Commit-Queue: Kyle Horimoto <khorimoto@chromium.org>
Reviewed-by: Ryan Hansberry <hansberry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501486}